--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,5 @@
 platform = espressif32
 board = ttgo-t7-v14-mini32
 framework = arduino
+board_build.partitions=huge_app.csv
 board_build.partitions = huge_app.csv
